; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_99.c_own.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_99.c_own.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.target_info = type { i32, i32, i64, i32 }

@PLIST = common dso_local global i64 0, align 8
@lame_cmd = common dso_local global i32 0, align 4
@shellcode = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Unknown ownage method\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@mail = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @own(%struct.target_info* byval(%struct.target_info) align 8 %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  store i8* %3, i8** %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i32 @prepare_mail(i8* %8, i8* %9, i8* %10)
  %12 = getelementptr inbounds %struct.target_info, %struct.target_info* %0, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  switch i32 %13, label %32 [
    i32 1, label %14
    i32 0, label %27
  ]

14:                                               ; preds = %4
  %15 = getelementptr inbounds %struct.target_info, %struct.target_info* %0, i32 0, i32 3
  %16 = load i32, i32* %15, align 8
  %17 = getelementptr inbounds %struct.target_info, %struct.target_info* %0, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @PLIST, align 8
  %20 = sub nsw i64 %18, %19
  %21 = getelementptr inbounds %struct.target_info, %struct.target_info* %0, i32 0, i32 2
  %22 = load i64, i64* %21, align 8
  %23 = getelementptr inbounds %struct.target_info, %struct.target_info* %0, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @lame_cmd, align 4
  %26 = call i32 @own_hard(i32 %16, i64 %20, i64 %22, i32 %24, i32 %25)
  br label %34

27:                                               ; preds = %4
  %28 = getelementptr inbounds %struct.target_info, %struct.target_info* %0, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @shellcode, align 4
  %31 = call i32 @own_easy(i32 %29, i32 %30)
  br label %34

32:                                               ; preds = %4
  %33 = call i32 @die(i32 0, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %34

34:                                               ; preds = %32, %27, %14
  %35 = load i8*, i8** @mail, align 8
  %36 = call i32 @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %35)
  ret void
}

declare dso_local i32 @prepare_mail(i8*, i8*, i8*) #1

declare dso_local i32 @own_hard(i32, i64, i64, i32, i32) #1

declare dso_local i32 @own_easy(i32, i32) #1

declare dso_local i32 @die(i32, i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
